--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "uuid": "^11.0.5",
     "web-vitals": "^2.1.0",
     "zustand": "^5.0.3"
   },
